--- a/DNTProfiler/App.config
+++ b/DNTProfiler/App.config
@@ -19,6 +19,7 @@
     </providers>
   </entityFramework>
   <runtime>
+    <loadFromRemoteSources enabled="true"/>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
         <assemblyIdentity name="System.Net.Http" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
