--- a/Tests/DNTProfiler.UnitTests/DNTProfiler.UnitTests.csproj
+++ b/Tests/DNTProfiler.UnitTests/DNTProfiler.UnitTests.csproj
@@ -68,6 +68,7 @@
     <Compile Include="ScriptDomVisitorsTests\NullComparisonVisitorTests.cs" />
     <Compile Include="ScriptDomVisitorsTests\UnboundedResultSetVisitorTests.cs" />
     <Compile Include="ScriptDomVisitorsTests\DuplicateJoinsVisitorTests.cs" />
+    <Compile Include="ScriptDomVisitorsTests\NormalizedSqlTests.cs" />
     <Compile Include="ScriptDomVisitorsTests\UnparametrizedWhereClausesVisitorTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
