--- a/Tests/DNTProfiler.ConsoleAppDotNet45/DNTProfiler.ConsoleAppDotNet45.csproj
+++ b/Tests/DNTProfiler.ConsoleAppDotNet45/DNTProfiler.ConsoleAppDotNet45.csproj
@@ -44,6 +44,10 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
     </Reference>
+    <Reference Include="Newtonsoft.Json, Version=6.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\packages\Newtonsoft.Json.6.0.8\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="Nito.AsyncEx">
       <HintPath>..\..\packages\Nito.AsyncEx.3.0.0\lib\net45\Nito.AsyncEx.dll</HintPath>
     </Reference>
@@ -59,6 +63,9 @@
     <Reference Include="System.Runtime, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
     <Reference Include="System.Threading" />
     <Reference Include="System.Threading.Tasks" />
+    <Reference Include="System.Windows.Interactivity, Version=4.5.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Expression.Blend.Sdk.1.0.2\lib\net45\System.Windows.Interactivity.dll</HintPath>
+    </Reference>
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -81,9 +88,9 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\DNTProfiler.Core\DNTProfiler.EntityFramework.Core.csproj">
-      <Project>{484dc2d3-21e9-4c77-bca2-c3805906eac8}</Project>
-      <Name>DNTProfiler.EntityFramework.Core</Name>
+    <ProjectReference Include="..\..\DNTProfiler.Common\DNTProfiler.Common.csproj">
+      <Project>{8915b3a9-f138-4394-bd73-87ae07d20399}</Project>
+      <Name>DNTProfiler.Common</Name>
     </ProjectReference>
     <ProjectReference Include="..\..\DNTProfiler.Core\DNTProfiler.EntityFramework.Core.csproj">
       <Project>{484dc2d3-21e9-4c77-bca2-c3805906eac8}</Project>
@@ -93,6 +100,9 @@
       <Project>{4738317f-daaa-45b4-975b-ce70a719618e}</Project>
       <Name>DNTProfiler.TestEFContext</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="readme.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
