--- a/Tests/DNTProfiler.ConsoleAppDotNet45/DNTProfiler.ConsoleAppDotNet45.csproj
+++ b/Tests/DNTProfiler.ConsoleAppDotNet45/DNTProfiler.ConsoleAppDotNet45.csproj
@@ -78,6 +78,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TestAsync.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config">
