Improved detection of UnparametrizedWhereClauses.

--- a/Tests/DNTProfiler.IntegrationTests/DNTProfiler.IntegrationTests.csproj
+++ b/Tests/DNTProfiler.IntegrationTests/DNTProfiler.IntegrationTests.csproj
@@ -82,6 +82,7 @@
     <Compile Include="FunctionCallsInWhereClauseTests.cs" />
     <Compile Include="DuplicateJoinsTests.cs" />
     <Compile Include="CacheableTests.cs" />
+    <Compile Include="PossibleSqlInjectionTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
