Added DuplicateCommandsPerContext plugin.

--- a/Plugins/DNTProfiler.DuplicateCommandsPerContext/DNTProfiler.DuplicateCommandsPerContext.csproj
+++ b/Plugins/DNTProfiler.DuplicateCommandsPerContext/DNTProfiler.DuplicateCommandsPerContext.csproj
@@ -4,18 +4,17 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{4D90A83E-5506-4641-9EA8-0BB064CC381B}</ProjectGuid>
+    <ProjectGuid>{E0FB189F-32F2-4BDF-97C2-201650609608}</ProjectGuid>
     <OutputType>library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>DNTProfiler.PossibleSqlInjections</RootNamespace>
-    <AssemblyName>DNTProfiler.PossibleSqlInjections</AssemblyName>
+    <RootNamespace>DNTProfiler.DuplicateCommandsPerContext</RootNamespace>
+    <AssemblyName>DNTProfiler.DuplicateCommandsPerContext</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <WarningLevel>4</WarningLevel>
     <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\..\</SolutionDir>
     <RestorePackages>true</RestorePackages>
-    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -35,10 +34,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Microsoft.SqlServer.TransactSql.ScriptDom, Version=12.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91, processorArchitecture=MSIL">
-      <Private>True</Private>
-      <HintPath>..\..\packages\Microsoft.SqlServer.TransactSql.ScriptDom.12.0.1\lib\net40\Microsoft.SqlServer.TransactSql.ScriptDom.dll</HintPath>
-    </Reference>
     <Reference Include="Newtonsoft.Json, Version=6.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\packages\Newtonsoft.Json.6.0.8\lib\net40\Newtonsoft.Json.dll</HintPath>
@@ -58,7 +53,7 @@
     <Reference Include="PresentationFramework" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="PossibleSqlInjectionsPlugin.cs" />
+    <Compile Include="Core\CallbacksManager.cs" />
     <Compile Include="ViewModels\MainViewModel.cs" />
     <Page Include="Main.xaml">
       <Generator>MSBuild:Compile</Generator>
@@ -67,6 +62,7 @@
     <Compile Include="..\..\DNTProfiler.MetaData\SharedAssemblyInfo.cs">
       <Link>Properties\SharedAssemblyInfo.cs</Link>
     </Compile>
+    <Compile Include="DuplicateCommandsPerContextPlugin.cs" />
     <Compile Include="Main.xaml.cs">
       <DependentUpon>Main.xaml</DependentUpon>
       <SubType>Code</SubType>
