Added Unparameterized Skip & Take Plugin.

--- a/DNTProfiler.Infrastructure/DNTProfiler.Infrastructure.csproj
+++ b/DNTProfiler.Infrastructure/DNTProfiler.Infrastructure.csproj
@@ -73,8 +73,8 @@
       <HintPath>..\packages\Mono.Cecil.0.9.6.1\lib\net40\Mono.Cecil.Rocks.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="Newtonsoft.Json, Version=7.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <HintPath>..\packages\Newtonsoft.Json.7.0.1\lib\net40\Newtonsoft.Json.dll</HintPath>
+    <Reference Include="Newtonsoft.Json, Version=8.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.8.0.2\lib\net40\Newtonsoft.Json.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="OxyPlot, Version=2014.1.546.0, Culture=neutral, PublicKeyToken=638079a8f0bd61e9, processorArchitecture=MSIL">
@@ -138,6 +138,7 @@
     <Compile Include="ScriptDomVisitors\FindEqualityComparisonVisitor.cs" />
     <Compile Include="ScriptDomVisitors\FunctionCallsInWhereClauseVisitor.cs" />
     <Compile Include="ScriptDomVisitors\NullComparisonVisitor.cs" />
+    <Compile Include="ScriptDomVisitors\UnParametrizedSkipAndTakeVisitor.cs" />
     <Compile Include="ScriptDomVisitors\PrettyPrintTSql.cs" />
     <Compile Include="ScriptDomVisitors\RunTSqlFragmentVisitor.cs" />
     <Compile Include="ScriptDomVisitors\ScriptDomUtils.cs" />
