--- a/Tests/DNTProfiler.UnitTests/DNTProfiler.UnitTests.csproj
+++ b/Tests/DNTProfiler.UnitTests/DNTProfiler.UnitTests.csproj
@@ -70,6 +70,7 @@
     <Compile Include="ScriptDomVisitorsTests\DuplicateJoinsVisitorTests.cs" />
     <Compile Include="ScriptDomVisitorsTests\NormalizedSqlTests.cs" />
     <Compile Include="ScriptDomVisitorsTests\SelectStarExpressionVisitorTests.cs" />
+    <Compile Include="ScriptDomVisitorsTests\ParametrizedSkipAndTakeTests.cs" />
     <Compile Include="ScriptDomVisitorsTests\UseFirstLevelCacheVisitorTests.cs" />
     <Compile Include="ScriptDomVisitorsTests\UnparametrizedWhereClausesVisitorTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
