--- a/Tests/DNTProfiler.IntegrationTests/DNTProfiler.IntegrationTests.csproj
+++ b/Tests/DNTProfiler.IntegrationTests/DNTProfiler.IntegrationTests.csproj
@@ -29,8 +29,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="EFSecondLevelCache, Version=1.1.4.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\EFSecondLevelCache.1.1.4.0\lib\net40\EFSecondLevelCache.dll</HintPath>
+    <Reference Include="EFSecondLevelCache, Version=1.1.5.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\EFSecondLevelCache.1.1.5.0\lib\net40\EFSecondLevelCache.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
@@ -83,6 +83,7 @@
     <Compile Include="DuplicateJoinsTests.cs" />
     <Compile Include="CacheableTests.cs" />
     <Compile Include="PossibleSqlInjectionTests.cs" />
+    <Compile Include="ParametrizedSkipAndTakeTests.cs" />
     <Compile Include="UseFirstLevelCacheTests.cs" />
   </ItemGroup>
   <ItemGroup>
